--- a/Service Analysis Dataset.ipynb
+++ b/Service Analysis Dataset.ipynb
@@ -432,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".conda",
    "language": "python",
    "name": "python3"
   },
@@ -446,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
